Add functionality to CE button. Slight refactor
ClearEntry button deletes last symbol from current
operand. If all deleted from second operand, first
+ operation symbol show up on main display again,
top one clears. If all deleted from frist operand
'decoy' zero's placed in it's place. Sign '-' is
deleted alongside the last digit of operand. If
'.' gets deleted .decimal button gets active again
Decimal button needs additional work still

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html {
 
 p {
     margin: 0px;
+    height: 64px;
     font-size: 56px;
     text-align: right;
 }
@@ -61,6 +62,11 @@ button {
 
 .forInput {
     background-color: lightsteelblue;
+}
+
+.decimal:disabled {
+    background-color: lightskyblue;
+    border-color: dimgrey;
 }
 
 .operation,
