Add a check to calculations to crop long decimals
Additional change to style so that display would
grow and wrapped strings if input IS absurdly long

--- a/style.css
+++ b/style.css
@@ -24,15 +24,17 @@ html {
 
 p {
     margin: 0px;
-    height: 64px;
+    min-height: 64px;
     font-size: 56px;
     text-align: right;
+    overflow-wrap: anywhere;
 }
 
 .display .prevExpression {
     font-size: 28px;
     border-bottom: 2px dashed black;
-    height: 34px;
+    min-height: 34px;
+    overflow-wrap: break-word;
 }
 
 .buttons {
